fixed map issue on mobile view and added a loading screen

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
@@ -14,65 +15,68 @@ body {
 .brand-primary {
     color: black;
 }
+
 .brand-secondary {
-    color: #061C8E; 
+    color: #061C8E;
 }
 
-span{
+span {
     font-size: larger;
 }
 
 .custom-select {
-    width: 130px; 
-    font-size: 13px; 
+    width: 130px;
+    font-size: 13px;
     border-radius: 5px;
     background-color: #E8F2FE;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 .custom-bg {
     background-color: #D5E4F7;
 }
 
 .icon-size {
-    width: 40px;  
-    height: 40px; 
+    width: 40px;
+    height: 40px;
 }
 
 .search-bar-container {
     position: relative;
     display: flex;
-    justify-content: center; 
-    margin-top: 20px; 
+    justify-content: center;
+    margin-top: 20px;
 }
+
 .search-bar {
     font-weight: 500;
-    width: 100%; 
+    width: 100%;
     max-width: 600px;
     height: 55px;
-    border-radius: 20px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     font-size: medium;
     color: #363C48;
     background-color: #FFFEEA;
 }
 
-.location-btn{
-    background-color:#FFFEEA;
+.location-btn {
+    background-color: #FFFEEA;
     border: none;
     border-radius: 20px;
     padding: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 60px;
     margin-left: 10px;
 }
 
-.location-btn:hover{
-    background-color:#f4f3e2;
+.location-btn:hover {
+    background-color: #f4f3e2;
 }
 
 
-.location-btn-icon{
+.location-btn-icon {
     width: 30px;
     height: 30px;
 }
@@ -90,7 +94,7 @@ span{
     display: none;
     text-align: center;
     border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin-right: 65px;
 }
 
@@ -99,40 +103,41 @@ span{
     cursor: pointer;
     font-weight: 500;
     background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .suggestions-list li:hover {
     background-color: #f0f0f0;
 }
 
-#nowText{
+#nowText {
     color: #122438;
 }
-.currentWeatherDetails{
+
+.currentWeatherDetails {
     display: flex;
     flex-direction: column;
     justify-content: left;
     align-items: left;
 }
 
-.weatherStatus{
+.weatherStatus {
     display: flex;
     flex-direction: row;
 }
 
-#currentTemp{
+#currentTemp {
     font-size: 320%;
     color: #001F34;
 
 }
 
-#currentCondtionIcon{
+#currentCondtionIcon {
     width: 80px;
     height: 80px;
 }
 
-.weatherStatusText{
+.weatherStatusText {
     justify-content: right;
     align-items: right;
     text-align: right;
@@ -141,17 +146,17 @@ span{
     text-wrap: nowrap;
 }
 
-#currentStatusText{
+#currentStatusText {
     font-size: 110%;
     color: #021323;
 }
 
-#currentFeelsLikeText{
+#currentFeelsLikeText {
     font-size: 80%;
     color: #6D7781;
 }
 
-#highAndLowTemp{
+#highAndLowTemp {
     font-size: 80%;
     color: #6D7781;
 }
@@ -160,6 +165,7 @@ span{
     from {
         opacity: 0;
     }
+
     to {
         opacity: 1;
     }
@@ -167,12 +173,12 @@ span{
 
 
 .fade-in {
-    opacity: 0; 
-    animation: fadeIn 1s ease-in; 
+    opacity: 0;
+    animation: fadeIn 1s ease-in;
     animation-fill-mode: both;
 }
 
-#popup-overlay{
+#popup-overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -185,7 +191,7 @@ span{
     z-index: 1000;
 }
 
-#popup-content{
+#popup-content {
     position: absolute;
     top: 5%;
     display: flex;
@@ -193,7 +199,8 @@ span{
     width: 90%;
     max-width: 700px;
     height: 60%;
-    background-color: #D5E4F7;;
+    background-color: #D5E4F7;
+    ;
     border-radius: 20px;
     align-items: center;
     justify-content: center;
@@ -204,23 +211,69 @@ span{
     width: 90%;
     cursor: pointer;
     border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.popup-operations{
+.popup-operations {
     display: flex;
     flex-direction: row;
 }
 
-#btnClose{
+#btnClose {
     border: none;
     padding-left: 10px;
     padding-right: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 20px; 
+    border-radius: 20px;
     background-color: rgb(140, 223, 140);
 }
 
-#btnClose:hover{
+#btnClose:hover {
     background-color: rgb(89, 154, 89);
+}
+
+#loading-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1500;
+    background-color: #D5E4F7;
+}
+
+
+
+.hidden {
+    display: none;
+}
+
+.break-animation {
+    animation: break 1s forwards;
+}
+
+#loading-icon {
+    width: 100px;
+    height: 100px;
+}
+
+
+
+@keyframes break {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    50% {
+        transform: scale(1.5);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(0);
+        opacity: 0;
+    }
 }
